# OSOC-3

./: LICENSE  README.md  codecov.yaml  dependabot.yml  package.json
backend/: .coveragerc  .env.example  .gitignore  .pylintrc  README.md  codecov.yaml  create_admin.py  create_webhook.py  database_docker.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  failed-webhook-5933d05a-b197-45ec-b95c-30c5be43fc80.json  fill_my_database.py  mypy.ini  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  settings.py  temp.py  tests.md
backend/migrations/: env.py
backend/migrations/versions/: 145816a4b2df_add_form_tables.py  1862d7dea4cc_.py  2403b70be336_refactor_and_add_projectrolesuggestion.py  32e41fa0af0a_added_to_the_right_side_of_the_.py  43e6e98fe039_create_enum_for_email_statuses.py  54119dfdbb44_added_cascade_delete.py  55e311757afa_setup_database.py  583db0ffd707_initial_setup.py  6433759fff33_initial_setup.py  64c42bb48aee_.py  73e669bda33d_add_admin_field_remove_userrole_table_.py  810c6967f5d5_make_roles_a_list_make_edition_year_.py  8c97ecc58e5f_multiple_column_unique_constraint_coach_.py  94f24b41f33e_student_has_cascade_on_delete.py  964637070800_.py  9e69e9565e17_merge.py  a4a047b881db_add_email_to_google_github_auth.py  a5f19eb19cca_add_name_to_edition.py  b6a373574e13_link_invitation_links_to_editions.py  c06da164d5b9_link_invitation_links_to_editions.py  c5bdaa5815ca_.py  ca4c4182b93a_moved_email_to_authemail.py  d29dfe421181_remove_leftover_refactored_association_.py  d4eaf2b564a4_merge_heads.py  f125e90b2cf3_link_editions_to_coach_requests.py  ff446c612a5f_add_github_access_token_to_db.py
backend/src/app/: app.py
backend/src/app/exceptions/: __init__.py  authentication.py  editions.py  handlers.py  parsing.py  projects.py  register.py  students_email.py  util.py  validation_exception.py  webhooks.py
backend/src/app/logic/: answers.py  editions.py  invites.py  partners.py  projects.py  projects_students.py  register.py  security.py  skills.py  students.py  suggestions.py  users.py  webhooks.py
backend/src/app/logic/oauth/: github.py
backend/src/app/routers/: __init__.py  authentication.py  base.py  tags.py
backend/src/app/routers/editions/: __init__.py  editions.py
backend/src/app/routers/editions/invites/: __init__.py  invites.py
backend/src/app/routers/editions/projects/: __init__.py  projects.py
backend/src/app/routers/editions/register/: __init__.py  register.py
backend/src/app/routers/editions/skills/: __init__.py  skills.py
backend/src/app/routers/editions/students/: __init__.py  students.py
backend/src/app/routers/editions/users/: __init__.py  users.py
backend/src/app/routers/editions/webhooks/: __init__.py  schemas.py  webhooks.py
backend/src/app/routers/login/: __init__.py  login.py
backend/src/app/routers/skills/: skills.py
backend/src/app/routers/users/: users.py
backend/src/app/schemas/: answers.py  editions.py  invites.py  login.py  projects.py  register.py  skills.py  students.py  suggestion.py  users.py  utils.py  validators.py  webhooks.py
backend/src/app/schemas/oauth/: github.py
backend/src/app/utils/: dependencies.py  edition_readonly.py  mailto.py  websockets.py
backend/src/app/webhooks/: routes.py  schemas.py
backend/src/database/: database.py  engine.py  enums.py  exceptions.py  models.py  schemas.py
backend/src/database/crud/: editions.py  invites.py  partners.py  projects.py  projects_students.py  register.py  skills.py  students.py  suggestions.py  users.py  util.py  webhooks.py
backend/templates/: invites.txt
backend/tests/: conftest.py  fill_database.py  test_api_users.py  test_dummy.py  test_fill_database.py
backend/tests/test_database/: test_models.py
backend/tests/test_database/test_crud/: test_invites.py  test_partners.py  test_projects.py  test_projects_students.py  test_register.py  test_skills.py  test_students.py  test_suggestions.py  test_users.py
backend/tests/test_logic/: test_register.py  test_security.py  test_suggestions.py
backend/tests/test_logic/test_oauth/: test_github.py
backend/tests/test_routers/test_editions/test_editions/: test_editions.py
backend/tests/test_routers/test_editions/test_invites/: test_invites.py
backend/tests/test_routers/test_editions/test_projects/: test_projects.py
backend/tests/test_routers/test_editions/test_projects/test_students/: test_students.py
backend/tests/test_routers/test_editions/test_register/: test_register.py
backend/tests/test_routers/test_editions/test_students/: test_students.py
backend/tests/test_routers/test_editions/test_students/test_answers/: test_answers.py
backend/tests/test_routers/test_editions/test_students/test_suggestions/: test_suggestions.py
backend/tests/test_routers/test_editions/test_users/: test_users.py
backend/tests/test_routers/test_editions/test_webhooks/: data.py  test_webhooks.py
backend/tests/test_routers/test_login/: test_login.py
backend/tests/test_routers/test_skills/: test_skills.py
backend/tests/test_routers/test_users/: test_users.py
backend/tests/test_schemas/: test_invites.py  test_validators.py
backend/tests/test_utils/: test_dependencies.py  test_mailto.py  test_websockets.py
backend/tests/utils/: test_client.py
backend/tests/utils/authorization/: __init__.py  auth_client.py
(+552 files in other folders)
